# forest_rag

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-hf.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/routers/: __init__.py  ask.py
app/schemas/: __init__.py  rag.py
app/services/: __init__.py  rag_service.py
scripts/ingestion/: splitting.py
scripts/populate/: create_db_snap.py  load_db_snap.py
tests/: test_retrieval_smoke.py
